--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ server/public
 vite.config.ts.*
 *.tar.gz
 .env
+.env.local
+client/.env
+client/.env.local
 .vercel
 client/node_modules
 server/node_modules
