--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "build:server": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "build:all": "npm run build && npm run build:server",
     "start": "NODE_ENV=production node dist/index.js",
+    "start:server": "NODE_ENV=production tsx server/index.ts",
+    "start:client": "vite preview",
     "check": "tsc",
     "db:push": "drizzle-kit push",
     "vercel-build": "vite build"
@@ -56,6 +58,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "connect-pg-simple": "^10.0.0",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
@@ -93,6 +96,7 @@
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
     "@types/connect-pg-simple": "^7.0.3",
+    "@types/cors": "^2.8.19",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/node": "20.16.11",
