Fix server imports: remove vite/db.ts, add schema.ts and logger.ts for standalone backend

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -13,12 +13,8 @@
     "resolveJsonModule": true,
     "declaration": true,
     "declarationMap": true,
-    "noEmit": true,
-    "baseUrl": ".",
-    "paths": {
-      "@shared/*": ["../shared/*"]
-    }
+    "noEmit": true
   },
-  "include": ["./**/*.ts", "../shared/**/*.ts"],
+  "include": ["./**/*.ts"],
   "exclude": ["node_modules", "dist"]
 }
