Fix Vercel serverless deployment: conditionally listen on port and export handler

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -11,5 +11,9 @@
       "src": "/(.*)",
       "dest": "index.ts"
     }
-  ]
+  ],
+  "env": {
+    "MONGODB_URI": "@mongodb_uri",
+    "STRIPE_SECRET_KEY": "@stripe_secret_key"
+  }
 }
