Fix ES module imports: add .js extensions for Vercel compatibility

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -3,13 +3,24 @@
   "builds": [
     {
       "src": "index.ts",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": ["**/*.ts", "**/*.json"]
+      }
     }
   ],
   "routes": [
     {
+      "src": "/favicon.ico",
+      "dest": "/index.ts"
+    },
+    {
+      "src": "/favicon.png", 
+      "dest": "/index.ts"
+    },
+    {
       "src": "/(.*)",
-      "dest": "index.ts"
+      "dest": "/index.ts"
     }
   ]
 }
