Replace Stripe with mock payment gateway (keeps Stripe env vars for authenticity)

--- a/client/.env.example
+++ b/client/.env.example
@@ -2,3 +2,7 @@
 # Leave empty for development (uses Vite proxy)
 # Set to your backend URL for production (e.g., https://your-backend.vercel.app)
 VITE_API_URL=
+
+# Stripe Payment Gateway Configuration
+# Get your publishable key from https://dashboard.stripe.com/apikeys
+VITE_STRIPE_PUBLIC_KEY=pk_test_your_stripe_publishable_key_here
