--- a/server/.env.example
+++ b/server/.env.example
@@ -4,8 +4,12 @@
 # MongoDB connection string (required)
 MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/dbname
 
-# Stripe secret key (optional)
-STRIPE_SECRET_KEY=sk_test_your_stripe_test_key
+# Stripe Payment Gateway Configuration (required for payments)
+# Get your secret key from https://dashboard.stripe.com/apikeys
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+
+# Stripe Webhook Secret (optional, for webhook verification)
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
 
 # Frontend URL for CORS (required in production)
 FRONTEND_URL=http://localhost:3001
