--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@reduxjs/toolkit": "^2.11.2",
     "@tanstack/react-query": "^5.60.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -55,6 +56,7 @@
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.4.0",
     "react-qr-scanner": "^1.0.0-alpha.11",
+    "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.4",
     "recharts": "^2.13.0",
     "tailwind-merge": "^2.5.4",
