feat: add face/voice auth & fix transaction history filter

--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "face-api.js": "^0.22.2",
     "framer-motion": "^11.13.1",
     "html-to-image": "^1.11.13",
     "input-otp": "^1.2.4",
